--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,3 +6,10 @@ body {
   padding: 3rem 1.5rem;
   text-align: center;
 }
+
+.btn-outline-react {
+  color: #56D1F7;
+  background-color:transparent;
+  background-image:none;
+  border-color:#56D1F7;
+}
