--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+html {
+  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans',Droid Sans,'Helvetica Neue',sans-serif;
+}
+
 body {
   padding-top: 5rem;
 }
@@ -7,9 +11,17 @@ body {
   text-align: center;
 }
 
+.content h1 {
+  color: #56D1F7;
+}
+
 .btn-outline-react {
   color: #56D1F7;
   background-color:transparent;
   background-image:none;
   border-color:#56D1F7;
+}
+
+.navbar-dark .navbar-brand {
+  color: #56D1F7;
 }
